--- a/scss/main.scss
+++ b/scss/main.scss
@@ -132,6 +132,10 @@ $body-copy: 'Oxygen', sans-serif;
 			color: #7B270F;
 			font-size: 280%;
 		}
+		a {
+			color: #163A47;
+			text-decoration: none;
+		}
 	}
 	
 	.work { 
